# lua-ecs-benchmark

./: .gitignore  .gitmodules  .luacheckrc  .luarc.json  .markdownlint-cli2.jsonc  .markdownlintignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  build.hxml  dprint.json  pyproject.toml
.github/workflows/: llscheck.yml  luacheck.yml  pre-commit.yml  requirements.txt
docs/: rationale.md  specifications.md
results/: README.md  results.csv  results.md
results/lua5.1/: results.csv  results.md
results/luajit-off/: results.csv  results.md
results/luajit-on/: results.csv  results.md
results/plots/: README.md
scripts/: README_template.md  export.py  generate_plots.py  spot-check.py  submodules.lua
src/: Benchmark.lua  concord.lua  echoes.lua  ecs-lua.lua  main.lua  nata.lua  tinyecs.lua  utils.lua
src/base/: systems.lua
src/frameworks/: concord.lua  echoes.lua  ecs-lua.lua  evolved.lua  lovetoys.lua  nata.lua  tinyecs.lua
src/haxe/: EchoesBenchmark.hx  transpiled.lua
src/lib/: config.lua  progress.lua  types.lua  utils.lua
