[project]
name = "lua-ecs-benchmark"
version = "0.1.0"

requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "seaborn>=0.13.2",
    "typer>=0.9.0",
    "tabulate>=0.9.0",
    "rich>=13.7.0",
    "humanize>=4.9.0",
]

[tool.pdm]
distribution = false


[tool.ruff.lint]
select = [

  # mccabe
  "C90",
  # pyflakes
  "F",
  # pycodestyle
  "E", "W",
  # pep8-naming
  "D",
  # isort
  "I",
  # pylint
  "PL",
  # pyupgrade
  "UP",
  # flake8-2020
  "YTT",
  # flake8-annotations
  "ANN",
  # flake8-async
  "ASYNC",
  # flake8-bandit
  "S",
  # flake8-boolean-trap
  "FBT",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-flake8-comprehensions
  "C4",
  # flake8-debugger
  "T10",
  #flake8-errmsg
  "EM",
  # flake8-executable
  "EXE",
  # flake8-implicit-str-concat
  "ISC",
  # flake8-import-conventions
  "ICN",
  # # flake8-logging-format
  "G",
  # flake8-no-pep420
  "INP",
  # misc lints
  "PIE",
  # flake8-print
  "T20",
  # # flake8-pyi
  "PYI",
  # flake8-pytest-style
  "PT",
  # flake8-quotes
  "Q",
  # flake8-raise
  "RSE",
  # flake8-return
  "RET",
  # flake8-self
  "SLF",
  # flake8-simplify
  "SIM",
  # # tidy imports
  "TID",
  # type-checking imports
  "TCH",
  # flake8-gettext
  "INT",
  # flake8-unused-arguments
  "ARG",
  # eradicate
  "ERA",
  # pandas-vet
  "PD",
  # NumPy-specific rules
  "NPY",
  # pygrep-hooks
  "PGH",
  # tryceratops
  "TRY",
  # flynt
  "FLY",
    # Perflint
  "PERF",
  # Ruff-specific rules
  "RUF",
]

ignore = ["D100", "D104","E402", "PD901"]
